Сделал валидацию формы авторизации на сайте

--- a/src/components/form-aut/form-aut.sass
+++ b/src/components/form-aut/form-aut.sass
@@ -13,6 +13,8 @@
     &:focus, &:active
       outline-color: #9e00bd
       outline-style: dotted
+    &:valid
+      outline: none
 
 .form-aut__btn
   background-color: #a557b5
