Создал компонент "Продукт" и сделал их вывод на странице после авторизации

--- a/src/page/home/home.sass
+++ b/src/page/home/home.sass
@@ -1,4 +1,18 @@
+.container
+  text-align: center
+  
 .form-title
   font-size: 1.1rem
   text-align: center
   margin-bottom: 20px
+
+.products-title
+  margin-bottom: 20px
+
+.products-wrap
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-between
+  align-items: center
+  margin: 0 auto
+  max-width: 850px
