Добавил заголовок к модальному окну редактирования

--- a/src/components/modal-product/modal-product.sass
+++ b/src/components/modal-product/modal-product.sass
@@ -19,6 +19,9 @@
   border-radius: 10px
   background-color: #fff
 
+.edit-product__main-title
+  margin-bottom: 1.7rem
+
 .edit-product__text
   display: block
   font-weight: 700
