Сделал валидацию названия товара и цены (при редактировании товара)

--- a/src/components/modal-product/modal-product.sass
+++ b/src/components/modal-product/modal-product.sass
@@ -38,8 +38,11 @@
 
 .edit-product__title, .edit-product__price, 
 .edit-product__exp-date, .edit-product__category
-  width: 90%
+  width: 100%
   margin-right: 0.3rem
   border: 1px solid #212529
   border-radius: 3px
   padding: 0.5rem 1rem
+
+.edit-product_input-invalid
+  border: 1px solid red
