--- a/src/components/products/products.sass
+++ b/src/components/products/products.sass
@@ -12,7 +12,7 @@
   &:nth-child(odd)
     margin-right: 20px
   &:last-child
-    margin: 0
+    margin-right: 0
 
 .product__title
   margin: 0 auto 20px
