--- a/src/page/home/home.sass
+++ b/src/page/home/home.sass
@@ -1,11 +1,18 @@
 .container
   text-align: center
-  margin-bottom: 50px
-  
+  margin-bottom: 50px  
+
 .form-title
   font-size: 1.1rem
   text-align: center
   margin-bottom: 20px
+
+.product-title-wrap
+  display: flex
+  justify-content: space-around
+  align-items: center
+  margin: 0 auto
+  max-width: 850px
 
 .products-title
   margin-bottom: 20px
@@ -14,6 +21,15 @@
   display: flex
   flex-wrap: wrap
   justify-content: space-between
-  align-items: center
   margin: 0 auto
   max-width: 850px
+
+.btn-add-product
+  background-color: #ffffff
+  border: 2px solid #212529
+  border-radius: 5px
+  height: 45px
+  width: 210px
+  &:hover
+    background-color: #212529
+    color: #ffffff
