--- a/src/components/header/header.sass
+++ b/src/components/header/header.sass
@@ -3,3 +3,31 @@
   border-bottom: 1px solid #003500
   padding: 0.5rem
   margin-bottom: 30px
+  display: flex
+  justify-content: space-around
+  align-items: center
+
+.header-nav__ul
+  list-style: none
+  padding: 0
+  margin: 0
+  display: flex
+  justify-content: space-between
+  width: 100%
+
+.header-nav__item
+  margin-right: 20px
+  &:last-child
+    margin-right: 0
+
+
+.header-nav__link
+  text-decoration: none
+  color: #000000
+  &:hover
+    color: #46c342
+  &.active
+    color: #46c342
+    &:hover
+      text-decoration: none
+      cursor: default
