Реализовал функционал редактирования категорий на странице со списом

--- a/src/page/categories/categories.sass
+++ b/src/page/categories/categories.sass
@@ -9,3 +9,8 @@
 .categories-title
   margin: 0
   line-height: 1
+
+.category-edit__main-title
+  font-size: 1.6rem
+  text-align: center
+  margin: 0 auto 1.5rem
